# playwright-captcha

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  pytest.ini  requirements.txt
.github/: FUNDING.yml
examples/cloudflare/: click_interstitial.py  click_turnstile.py  twocaptcha_interstitial.py  twocaptcha_turnstile.py
examples/recaptcha/: captchaai_v2.py  captchaai_v3.py  tencaptcha_v2.py  tencaptcha_v3.py  twocaptcha_v2.py  twocaptcha_v3.py
playwright_captcha/: __init__.py
playwright_captcha/captchas/: __init__.py
playwright_captcha/captchas/cloudflare_interstitial/: __init__.py  apply.py  detect_data.py
playwright_captcha/captchas/cloudflare_turnstile/: __init__.py  apply.py  detect_data.py
playwright_captcha/captchas/recaptcha_v2/: __init__.py  apply.py  detect_data.py
playwright_captcha/captchas/recaptcha_v2/solvers/: captchaai.py  (+2 more)
playwright_captcha/captchas/recaptcha_v3/: __init__.py  apply.py  detect_data.py
playwright_captcha/solvers/: base_solver.py
playwright_captcha/solvers/api/: api_solver_base.py
playwright_captcha/solvers/click/: __init__.py  click_solver.py
playwright_captcha/types/: __init__.py  captcha.py  frameworks.py  solvers.py
playwright_captcha/utils/: dom_helpers.py  exceptions.py  js_script.py  misc.py  regex_helpers.py  validators.py
playwright_captcha/utils/camoufox_add_init_script/: .gitignore  add_init_script.py
tests/: conftest.py
tests/integration/: test_cloudflare_click.py  test_cloudflare_twocaptcha.py  test_recaptcha_captchaai.py  test_recaptcha_tencaptcha.py  test_recaptcha_twocaptcha.py
(+32 files in other folders)
